--- a/css/styles.css
+++ b/css/styles.css
@@ -70,19 +70,6 @@ form {
     grid-area: footer;
 }
 
-#rec1 {
-    grid-area: rec1;
-}
-
-#rec2 {
-    grid-area: rec2;
-}
-
-#rec3 {
-    grid-area: rec3;
-}
-
-
 /* Contenedores Grid */
 
 .index__grid {
@@ -321,29 +308,12 @@ form {
 
 /* Recomendaciones */
 
-.findings__grid {
-    display: grid;
-    gap: 0.5rem;
-    grid-template-columns: 95%;
-    grid-template-rows: auto;
-    grid-template-areas:
-        "rec1"
-        "rec2"
-        "rec3";
+.carrusel--height {
+    height: 35rem;
 }
 
-.findings__list li {
-    height: 250px;
-    width: 100%;
-    overflow: hidden;
-}
-
-.findings__list p {
-    position: relative;
-    top: -40rem;
-    text-align: center;
-    color: white;
-    font-size: 16px;
+.carrusel--heightB {
+    width: 820px;
 }
 
 /* Trabaja con nosotros */
@@ -613,15 +583,6 @@ form {
             "footer footer footer";
     }
 
-    .findings__grid {
-        gap: 0.5rem;
-        grid-template-columns: 60% 40%;
-        grid-template-rows: 50% 50%;
-        grid-template-areas:
-            "rec1 rec2"
-            "rec3 rec3";
-    }
-
     .practice-areas__grid {
         grid-template-columns: 50% 50%;
         column-gap: 1rem;
@@ -680,22 +641,18 @@ form {
 
     /* Recomendaciones */
 
-    .findings__list {
-        width: 100%;
-        position: static;
-    }
-
-    .findings__list li {
-        width: 100%;
+    .carrusel {
+        box-shadow: 0 0 5px black;
+        border-radius: 1rem;
         overflow: hidden;
     }
 
-    .findings__list p {
-        position: relative;
-        top: -40rem;
-        text-align: center;
-        color: white;
-        font-size: 16px;
+    .carrusel--height {
+        height: auto;
+    }
+
+    .carrusel--heightB {
+        width: auto;
     }
 
     /* Reconocimientos internacionales */
