--- a/css/styles.css
+++ b/css/styles.css
@@ -120,7 +120,6 @@ form {
     top: 0px;
     padding: 5px 15px 0 15px;
     z-index: 100;
-    flex-wrap: nowrap;
 }
 
 .nav__ul {
@@ -134,9 +133,9 @@ form {
 
 .nav__logo {
     display: block;
-    width: 220px;
-    min-width: 130px;
-    margin-right: 20px;
+    width: 140px;
+    min-width: 160px;
+    margin-right: 10px;
 }
 
 .nav__logo img {
@@ -552,6 +551,15 @@ form {
 
 /* Checkpoint 1 */
 
+@media (min-width: 341px) {
+
+    /* Nav */
+
+    .nav__logo {
+        width: 220px;
+    }
+}
+
 @media (min-width: 400px) {
 
     /* footer */
@@ -562,6 +570,8 @@ form {
 
 }
 
+/* Checkpoint 2 */
+
 @media (min-width: 480px) {
 
     /* Cabecera */
@@ -571,7 +581,7 @@ form {
     }
 }
 
-/* Checkpoint 2 */
+/* Checkpoint 3 */
 
 @media (min-width: 740px) {
 
@@ -740,7 +750,7 @@ form {
     }
 }
 
-/* Checkpoint 3 */
+/* Checkpoint 4 */
 
 @media (min-width: 1160px) {
 
