--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -13,7 +13,7 @@ $formTextSize: 15px;
 // Colores
 
 $paleta: (
-    'uno':#fd5000,
+    'uno': #F55000,
     'dos':#c23d00,
     'tres':#eb7f4d,
     'white':#ffffff,
