--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -184,6 +184,10 @@ p {
 // Noticias
 
 .news {
+    .cards {
+        width: 75%;
+    }
+
     h2 {
         margin-bottom: 6rem;
         text-align: center;
@@ -481,5 +485,5 @@ p {
 }
 
 #la-paloma {
-    margin-left: 9.2rem;
+    margin-left: 8.3rem;
 }
