--- a/css/main.css
+++ b/css/main.css
@@ -584,6 +584,12 @@ p {
     width: 40rem;
     min-width: 40rem;
   }
+  .socialBx ul a {
+    transition: 0.2s;
+  }
+  .socialBx ul a:hover {
+    scale: 1.3;
+  }
   .locations ul {
     width: 90%;
     display: flex;
