--- a/scss/_breakpoints.scss
+++ b/scss/_breakpoints.scss
@@ -141,10 +141,22 @@
 
     // Pie de página
 
+    .socialBx {
+        ul {
+            a {
+                transition: 0.2s;
+                &:hover {
+                    scale: 1.3;
+                }
+            }
+        }
+    }
+
     .locations {
         ul {
             width: 90%;
             @include flex(auto, auto, auto, auto);
+
             li {
                 ul {
                     width: 100%;
