--- a/scss/_breakpoints.scss
+++ b/scss/_breakpoints.scss
@@ -92,10 +92,14 @@
 
         .card {
             &:hover {
-                transition: color 0.2s, transform 0.5s;
+                transition: color 0.2s, transform 0.2s;
                 color: map-get($map: $paleta, $key: 'white');
                 background-color: map-get($map: $paleta, $key: 'uno');
                 transform: scale(1.05);
+
+                .card-footer {
+                    background-color: white
+                }
             }
         }
     }
