--- a/css/main.css
+++ b/css/main.css
@@ -579,6 +579,14 @@ p {
     border-radius: 1rem;
     overflow: hidden;
   }
+  .carrusel .button--orange {
+    box-shadow: 1px 2px 5px black;
+    height: 15px;
+    width: 15px;
+    border: #000000 1px solid;
+    border-radius: 50%;
+    background-color: #F55000;
+  }
   .carrusel--height {
     height: auto;
   }
