--- a/scss/_breakpoints.scss
+++ b/scss/_breakpoints.scss
@@ -121,6 +121,15 @@
         box-shadow: 0 0 5px map-get($map: $paleta, $key: 'black');
         border-radius: 1rem;
         overflow: hidden;
+
+        .button--orange {
+            box-shadow: 1px 2px 5px black;
+            height: 15px;
+            width: 15px;
+            border: map-get($map: $paleta, $key: 'black') 1px solid;
+            border-radius: 50%;
+            background-color: map-get($map: $paleta, $key: 'uno');
+        }
     }
 
     .carrusel--height {
