--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -14,8 +14,9 @@ $formTextSize: 15px;
 
 $paleta: (
     'uno': #F55000,
-    'dos':#c23d00,
-    'tres':#eb7f4d,
+    'dos':#3f1400,
+    'tres':#270d00,
+    'cuatro': #724732,
     'white':#ffffff,
     'black':#000000,
     'gray':#eeeeee,
