--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -473,3 +473,84 @@ p {
         padding: 10px 0;
     }
 }
+
+//Página de error
+
+.errorBody {
+    @include flex(auto, center, center, auto);
+    background-color: map-get($map: $paleta, $key: 'tres');
+    height: 100vh;
+    width: 100%;
+
+    header {
+        .errorTitle {
+            h1 {
+                width: 100%;
+                text-align: center;
+                font-size: 25px;
+                color: map-get($map: $paleta, $key: 'dos');
+                text-transform: uppercase;
+                -webkit-box-reflect: below 1px linear-gradient(transparent, #fd480033);
+                line-height: 0.8em;
+                letter-spacing: 16px;
+                animation: anim 5s linear infinite;
+                outline: none;
+
+                @keyframes anim {
+
+                    0%,
+                    18%,
+                    20%,
+                    50.1%,
+                    60%,
+                    65.1%,
+                    80%,
+                    90.1%,
+                    92% {
+                        color: map-get($map: $paleta, $key: 'dos');
+                        text-shadow: none;
+                    }
+    
+                    18.1%,
+                    20.1%,
+                    30%,
+                    50%,
+                    60.1%,
+                    65%,
+                    80.1%,
+                    90%,
+                    92.1%,
+                    100% {
+                        color: white;
+                        text-shadow: 0 0 10px map-get($map: $paleta, $key: 'uno'),
+                            0 0 20px map-get($map: $paleta, $key: 'uno'),
+                            0 0 40px map-get($map: $paleta, $key: 'uno'),
+                            0 0 80px map-get($map: $paleta, $key: 'uno'),
+                            0 0 160px map-get($map: $paleta, $key: 'uno');
+                    }
+                }
+            }
+        }
+
+        .errorReturn {
+            margin-top: 10rem;
+            text-align: center;
+            @include flex(column, center, center, auto);
+            width: 100%;
+            h2 {
+                color: white;
+                opacity: .3;
+                margin-bottom: 10rem;
+            }
+
+            a {
+                @include flex(auto, center, center, auto);
+                border-radius: 10px;
+                width: 140px;
+                height: 30px;
+                font-size: 18px;
+                animation: anim 5s linear infinite;
+            }
+        }
+    }
+}
