--- a/css/main.css
+++ b/css/main.css
@@ -677,10 +677,10 @@ p {
     width: 40rem;
     min-width: 40rem;
   }
-  .socialBx ul a {
+  .socialBx ul li a img {
     transition: 0.2s;
   }
-  .socialBx ul a:hover {
+  .socialBx ul li a img:hover {
     scale: 1.3;
   }
   .locations ul {
